--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "src/assets/css/font-awesome.css",
               "src/assets/css/popuo-box.css",
               "src/assets/css/style.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "src/assets/js/jquery.min.js",
