--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^3.3.4",
     "jquery": "^3.5.1",
     "ngx-toastr": "^13.1.0",
