--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "angular-cc-library": "^2.0.1",
     "bootstrap": "^3.3.4",
     "jquery": "^3.5.1",
     "ngx-toastr": "^13.1.0",
